[workspace]
members = [".", "plugin", "plugins/*"]

[workspace.package]
authors    = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
homepage   = "https://github.com/termapps/dotsync"
repository = "https://github.com/termapps/dotsync"

edition      = "2021"
rust-version = "1.79.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[workspace.dependencies]
prost = "0.11.8"
tokio = { version = "1.27.0", features = ["full"] }
tonic = "0.8.3"

dotsync-plugin = { path = "plugin" }

[workspace.metadata.workspaces]
no_individual_tags = true

[package]
name    = "dotsync"
version = "0.0.1"

description = "Command line utility to manage dotfiles"

authors      = { workspace = true }
categories   = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
readme       = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anstream            = "0.6.4"
clap                = { version = "4.4.7", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.1.0"
colorchoice-clap    = "1.0.3"
eyre                = "0.6.12"
owo-colors          = "3.5.0"
proc-exit           = "2.0.1"
tracing             = "0.1.37"
tracing-log         = { version = "0.1.3", default-features = false, features = ["log-tracer", "std"] }
tracing-subscriber  = "0.3.16"

prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

dotsync-plugin = { workspace = true }

[dev-dependencies]
expect-test = "1.4.1"
tonic-build = "0.8"

[[bin]]
name = "dotsync"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = true

[profile.release-opt-size]
inherits  = "release"
lto       = true
opt-level = "z"
panic     = "abort"
