[workspace]
members = [".", "macros", "plugin", "plugins/*"]

[workspace.package]
authors    = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
homepage   = "https://github.com/termapps/dotsync"
repository = "https://github.com/termapps/dotsync"

edition      = "2024"
rust-version = "1.88.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[workspace.dependencies]
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

dotsync-macros = { version = "0.0.1", path = "macros" }
dotsync-plugin = { version = "0.0.1", path = "plugin" }

[workspace.metadata.workspaces]
no_individual_tags = true

[package]
name    = "dotsync"
version = "0.0.1"

description = "Command line utility to manage dotfiles"

authors      = { workspace = true }
categories   = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
readme       = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anstream            = "0.6.19"
clap                = { version = "4.5.41", features = ["derive", "wrap_help"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
colorchoice-clap    = "1.0.7"
eyre                = "0.6.12"
owo-colors          = "4.2.2"
proc-exit           = "2.0.2"
tracing             = "0.1.41"
tracing-log         = { version = "0.2.0", default-features = false, features = ["log-tracer", "std"] }
tracing-subscriber  = "=0.3.19"

dotsync-plugin = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }

dirs          = "6.0.0"
reqwest       = { version = "0.13.1", features = ["blocking", "json"] }
wasmtime      = "41.0.0"
wasmtime-wasi = "41.0.0"

[dev-dependencies]
expect-test = "1.4.1"

[[bin]]
name = "dotsync"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = true

[profile.release-opt-size]
inherits  = "release"
lto       = true
opt-level = "z"
panic     = "abort"
