[package]
name    = "dotsync-macros"
version = "0.0.1"

description = "Proc macros for dotsync"

authors      = { workspace = true }
categories   = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
readme       = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = "2"
