[package]
name    = "dotsync-plugin"
version = "0.0.1"

description = "Plugin framework for dotsync"

authors      = { workspace = true }
categories   = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
readme       = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[dependencies]
dotsync-macros = { workspace = true }

serde      = { workspace = true }
serde_json = { workspace = true }

schemars    = "1.2.0"
wit-bindgen = "0.51.0"
