[package]
name    = "dotsync-plugin-vscode"
version = "0.0.1"

description = "VSCode plugin for dotsync"

authors      = { workspace = true }
categories   = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
readme       = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
dotsync-plugin = { workspace = true }
serde          = { workspace = true }
